# Flex-cell_RoboSim

./: .gitignore  readme.md
Scenes_CoppeliaSim/: flex-cell-simple.ttt  ur3e-DTLab.ttt  ur5e_gripper_pmodel.sdf
Scenes_CoppeliaSim/robotDTLab/: setup.py
co-simulation/: DiscreteGrippingArm.fmu  coe.json  controller.py  controller_UR3e_DTLab.py  controller_UR5e_flexcell.py  cosimulation_execution.sh  cosimulation_execution_UR3e_DTLab.sh  cosimulation_execution_UR5e_Flexcell.sh  multimodel.json  multimodel_UR3e_CoppeliaSim.json  multimodel_UR3e_DTLab.json  multimodel_UR5e_CoppeliaSim.json  multimodel_UR5e_Flexcell.json  multimodel_normq.json  multimodel_normq_UR3e_CoppeliaSim.json  multimodel_normq_UR3e_DTLab.json  multimodel_normq_UR5e_CoppeliaSim.json  multimodel_normq_UR5e_Flexcell.json  terminate.sh
code/: flex-cell.py
code/rust/: Cargo.toml
code/rust/src/: main.rs
dmodelFMU/: Makefile  dmodelFMU.fmu  fmu.h  modelDescription.xml  skeleton.c  test_fmu.py
mapping/: execute.py  executeFMU.py  helper.py  wrap_fmu.sh
templates/: helper.py
tests/: .~lock.outputs_cosim.csv#  outputs_UR3e_CoppeliaSim.csv  outputs_UR3e_DTLab.csv  outputs_UR5e_CoppeliaSim_normq_20s.csv  outputs_UR5e_CoppeliaSim_rmq_20s.csv  outputs_UR5e_Flexcell_normq_15s.csv  outputs_UR5e_Flexcell_normq_20s.csv  outputs_UR5e_Flexcell_rmq_20s.csv.csv  outputs_cosim.csv  outputs_cosim_normq.csv  outputs_cosim_normq2.csv  outputs_cosim_normq3.csv  plot.py  plot_paper.py  plot_paper_overlapped.py  ur5e_flexcell_normq_15s.csv  ur5e_flexcell_normq_20s.csv  ur5e_flexcell_rmq_20s.csv
(+226 files in other folders)
